--- a/app/index.html
+++ b/app/index.html
@@ -8,14 +8,42 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/3.1.0/octicons.min.css">
-
+<link rel="stylesheet" href="../assets/css/index.css" >
     <!--[if lt IE 9]>
       <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
   <body>
+    <header>
+    <h1>Product</h1>
+    </header>
+    <div class="container-fluid">
+      <nav class="navbar navbar-default">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      		    <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <div class="navbar-collapse collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+              <li  class="selected"><a href="#">Home</a></li>
+              <li><a href="#">Product</a></li>
+      		    <li><a href="#">Contact Us</a></li>
+            </ul>
+          </div>
+      </nav>
 
+    <div class="container mainBody">
+
+    </div>
+
+    </div>
+    <footer>
+      <h3>Copyright by 3dplm Software</h3>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/bootstrap/3.3.5/js/bootstrap.min.js"></script>
