--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="Home">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,10 +10,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="../assets/css/index.css">
-
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/lightbox.css">
     <!--[if lt IE 9]> <script src="https://cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script> <script src="https://cdn.jsdelivr.net/respond/1.4.2/respond.min.js"></script> <![endif]-->
   </head>
-  <body ng-app="Home">
+  <body>
 
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
@@ -24,11 +25,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">ProductApp</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active">
+            <li>
               <a href="#Home">Home</a>
             </li>
             <li>
@@ -55,8 +56,12 @@
     <script src="../scripts/angular-route_1.4.2.js"></script>
     <script src="../scripts/ui-bootstrap.min.js"></script>
     <script src="../scripts/ui-bootstrap-tpls.min.js"></script>
-    <script src="../assets/js/Home.js"></script>  
-
+    <script src="../assets/js/Home.js"></script>
+    <script src="../scripts/readmore.js"></script>
+    <script src="../scripts/readmore.min.js"></script>
+    <script src="../scripts/lightbox.js"></script>
     <script src="../app/controllers/ProductController.js"></script>
+    <script src="../app/controllers/ProductDetailsController.js"></script>
+
   </body>
 </html>
